@@ -1,6 +1,7 @@
 applauncherd (0.28.0) unstable; urgency=low
 
   * Changes: Some coverity tool defects are fixed
+  * Changes: Coverity tool defect fixes for tests
 
  -- Olli Leppanen <olli.leppanen@nokia.com>  Thu, 14 Apr 2011 13:49:24 +0300
 
